added a component on how to use superset

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -44,9 +44,9 @@
       <mifosx-client-trends-bar></mifosx-client-trends-bar>
 
       <mifosx-amount-collected-pie></mifosx-amount-collected-pie>
-
+      
     </div>
-    
+    <div><mifosx-superset></mifosx-superset></div>
   </mat-card>
 
 </div>
