--- a/src/app/loans/loans-view/transactions/view-transaction/view-transaction.component.html
+++ b/src/app/loans/loans-view/transactions/view-transaction/view-transaction.component.html
@@ -1,7 +1,7 @@
 <div fxLayoutAlign="end" class="container m-b-20 transaction-buttons" fxLayoutGap="2%"
   *ngIf="!(transactionData.type.contra)">
   <span *mifosxHasPermission="'ADJUST_LOAN'">
-    <button mat-raised-button color="primary" [routerLink]="'edit'" [disabled]="!allowEdition">
+    <button mat-raised-button color="primary" [routerLink]="'edit'" [disabled]="allowEdition">
       <fa-icon icon="edit" class="m-r-10"></fa-icon>{{ 'Edit' | translate }}
     </button>
 
@@ -10,7 +10,7 @@
     </button>
   </span>
   <span *mifosxHasPermission="'CHARGEBACK_LOAN'">
-    <button mat-raised-button color="warn" [disabled]="!allowChargeback" (click)="chargebackTransaction()">
+    <button mat-raised-button color="warn" [disabled]="allowChargeback" (click)="chargebackTransaction()">
       <fa-icon icon="undo" class="m-r-10"></fa-icon>{{ 'Chargeback' | translate }}
     </button>
   </span>
