added all the changes for apache superset

--- a/src/app/home/superset/superset.component.html
+++ b/src/app/home/superset/superset.component.html
@@ -1,5 +1,3 @@
-<p>superset works!</p>
-<div *ngIf="supersetEnable!==true">
-    <iframe   src="http://localhost:8088/superset/dashboard/10?standalone=true&token=e0be1a3c-328e-4a27-9f0f-36f8200c3c1e" width="100%"
-    height="500px"></iframe>
-</div>
+<div class="superset-dashboard">
+    <div id="dashboard"></div>
+  </div>
